Upgrade javafx plugin